# analyzer-api

./: Makefile  README.md  poetry.toml  pyproject.toml  requirements.txt
data/: exp.csv
src/: main.py
src/app/: __init__.py
src/app/controllers/: analyzer.py
src/app/schemas/: __init__.py  lda.py
src/app/services/: __init__.py  analyzer.py
